--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
+        "pestphp/pest": "^2.0||^3.0",
+        "pestphp/pest-plugin-arch": "^2.0||^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0||^3.0",
         "rector/rector": "^2.0",
         "driftingly/rector-laravel": "^2.0"
     },
