--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "pestphp/pest-plugin-arch": "^2.0||^3.0",
         "pestphp/pest-plugin-laravel": "^2.0||^3.0",
         "rector/rector": "^2.0",
-        "driftingly/rector-laravel": "^2.0"
+        "driftingly/rector-laravel": "^2.0",
+        "orchestra/testbench": "^9.0.0||^8.22.0"
     },
     "autoload": {
         "psr-4": {
