Update nunomaduro/collision dependency versions
Aligned `nunomaduro/collision` versions in workflow and `composer.json` to ensure consistency. Updated workflow to use version `^8.1.1` and adjusted `composer.json` compatibility ranges accordingly.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -57,15 +57,17 @@ jobs:
           if [[ "${{ matrix.laravel }}" == "10.*" ]]; then
             composer require "laravel/framework:${{ matrix.laravel }}" \
                             "orchestra/testbench:${{ matrix.testbench }}" \
+                            "pestphp/pest:^2.0" \
                             "pestphp/pest-plugin-laravel:^2.0" \
                             "pestphp/pest-plugin-arch:^2.0" \
-                            "nunomaduro/collision:^8.1.1" --dev --no-interaction --no-update
+                            "nunomaduro/collision:^6.0" --dev --no-interaction --no-update
           else
             composer require "laravel/framework:${{ matrix.laravel }}" \
                             "orchestra/testbench:${{ matrix.testbench }}" \
+                            "pestphp/pest:^3.0" \
                             "pestphp/pest-plugin-laravel:^3.0" \
                             "pestphp/pest-plugin-arch:^3.0" \
-                            "nunomaduro/collision:^7.0" --dev --no-interaction --no-update
+                            "nunomaduro/collision:^8.1.1" --dev --no-interaction --no-update
           fi
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
