Add RSS feed support for blog posts
Integrated Spatie Laravel Feed to generate RSS feeds. Configured feed settings, added necessary routes, and updated models to produce feed items dynamically. Also included a custom RSS view for compatibility with the blog's structure.

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "filament/support": "^3.2",
         "fuelviews/laravel-sabhero-wrapper": ">=0.0",
         "spatie/filament-markdown-editor": "^2.0",
+        "spatie/laravel-feed": "^4.4",
         "spatie/laravel-package-tools": "^1.19"
     },
     "require-dev": {
