--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,14 @@
     "require": {
         "php": "^8.3",
         "ext-zip": "*",
-        "diglactic/laravel-breadcrumbs": "^9.0",
+        "diglactic/laravel-breadcrumbs": "^10.0||^9.0",
         "embed/embed": "^4.4",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/support": "^3.2",
         "fuelviews/laravel-sabhero-wrapper": ">=0.0",
         "spatie/filament-markdown-editor": "^2.0",
         "spatie/laravel-feed": "^4.4",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "spatie/laravel-package-tools": "^1.19"
     },
     "require-dev": {
