--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "pestphp/pest": "^3.0",
+        "pestphp/pest": "^3.0||^2.3",
         "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0||^2.3",
         "orchestra/testbench": "^9.0.0",
         "rector/rector": "^2.0",
         "driftingly/rector-laravel": "^2.0"
