--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,29 @@
 {
     "name": "fuelviews/laravel-sabhero-blog",
-    "description": "SabHero Blog package",
+    "description": "Sabhero blog package",
     "keywords": [
         "fuelviews",
         "laravel",
-        "service area business hero",
         "sabhero",
-        "sabhero-blog",
-        "laravel-sabhero-blog"
+        "sabhero-blog"
     ],
     "homepage": "https://github.com/fuelviews/laravel-sabhero-blog",
     "license": "MIT",
     "authors": [
         {
             "name": "Joshua Mitchener",
+            "homepage": "https://fuelviews.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^8.3||^8.2",
         "ext-zip": "*",
         "diglactic/laravel-breadcrumbs": "^10.0||^9.0",
         "embed/embed": "^4.4",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/support": "^3.2",
-        "fuelviews/laravel-sabhero-wrapper": ">=0.0",
+        "fuelviews/laravel-sabhero-wrapper": "^0.0",
         "spatie/filament-markdown-editor": "^2.0",
         "spatie/laravel-feed": "^4.4",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
@@ -33,10 +32,10 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "pestphp/pest": "^3.0||^2.3",
-        "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0||^2.3",
-        "orchestra/testbench": "^9.0.0",
+        "orchestra/testbench": "^10.2||^9.0.0||^8.22.0",
+        "pestphp/pest": "^3.0||^2.34",
+        "pestphp/pest-plugin-arch": "^3.0||^2.7",
+        "pestphp/pest-plugin-laravel": "^3.2||^2.3",
         "rector/rector": "^2.0",
         "driftingly/rector-laravel": "^2.0"
     },
