--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fuelviews/laravel-sabhero-article",
-    "description": "Sabhero article package",
+    "description": "SAB Hero Articles package",
     "keywords": [
         "fuelviews",
         "laravel",
@@ -17,15 +17,16 @@
         }
     ],
     "require": {
-        "php": "^8.3||^8.2",
+        "php": "^8.3",
         "ext-zip": "*",
         "diglactic/laravel-breadcrumbs": "^10.0||^9.0",
         "embed/embed": "^4.4",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/support": "^3.2",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "ralphjsmit/laravel-glide": "*",
         "spatie/filament-markdown-editor": "^2.0",
         "spatie/laravel-feed": "^4.4",
-        "illuminate/contracts": "^10.0||^11.0||^12.0",
         "spatie/laravel-package-tools": "^1.19"
     },
     "require-dev": {
