--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "sabhero",
         "sabhero-articles",
         "articles",
-        "blog"
+        "blogs"
     ],
     "homepage": "https://github.com/fuelviews/laravel-sabhero-articles",
     "license": "MIT",
@@ -23,13 +23,13 @@
         "ext-zip": "*",
         "diglactic/laravel-breadcrumbs": "^10.0||^9.0",
         "embed/embed": "^4.4",
-        "filament/spatie-laravel-media-library-plugin": "^3.2",
-        "filament/support": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.3",
+        "filament/support": "^3.3",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
         "ralphjsmit/laravel-glide": "*",
         "spatie/filament-markdown-editor": "^2.0",
         "spatie/laravel-feed": "^4.4",
-        "spatie/laravel-package-tools": "^1.19"
+        "spatie/laravel-package-tools": "^1.92"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
